shell-scripts layer and shellcheck dependency

--- a/setup.org
+++ b/setup.org
@@ -2,6 +2,8 @@
 * TODO pipx
 * my scripts
   ~pyudev~ package is needed by the ~extmonitor~ script, honestly consider turning it into a simple package so that you can install it in a sandbox with all its dependencies using pipx.
+* Shell scripts
+  Need to install https://github.com/koalaman/shellcheck for shell scripts layer to work.
 * i3
 ** py3status
    #+begin_src sh
