--- a/spacemacs.d/user-config.org
+++ b/spacemacs.d/user-config.org
@@ -231,7 +231,7 @@
      (add-hook 'after-init-hook 'org-roam-mode)
    #+end_src
 
-   See ~init.el~ for roam directory setting.
+   See ~init.el~ for roam directory setting. I tried it here but it didn't work.
 
 ** Babel
    Extend support to some more languages that I use.
