--- a/spacemacs.d/user-config.org
+++ b/spacemacs.d/user-config.org
@@ -313,24 +313,70 @@ In all text modes except yaml.
       (spacemacs/set-leader-keys-for-major-mode 'org-mode "od" 'indent-org-src-block-automatically)
     #+end_src
 
-** Agendas and Tags
-   By default the variable is set to nil, initialize it as an empty list so as to add stuff incrementally to it.
+** Agendas
 #+begin_src emacs-lisp
-  (setq org-tag-persistent-alist '())
-#+end_src
-
-Bring together the different agenda views defined in subsections.
-#+begin_src emacs-lisp :var ike-matrix=ike-matrix personal=personal work=work
+  (org-super-agenda-mode 1)
   (setq org-agenda-custom-commands
-        (append
-         personal
-         work
-         ike-matrix))
+        '(("i" "Inbox"
+           tags "LEVEL=2"
+           ((org-agenda-files
+             (list (expand-file-name "inbox.org" org-directory)))
+            (org-agenda-todo-ignore-with-date nil)
+            (org-agenda-todo-list-sublevels nil)
+            (org-agenda-dim-blocked-tasks t)
+            (org-super-agenda-groups
+             '((:auto-parent t)))))
+          ("w" "Work Daily"
+           ((agenda
+             ""
+             ((org-agenda-span 'day)
+              (org-agenda-files (list (expand-file-name "work.org" org-directory)))
+              (org-super-agenda-groups
+               '((:name "Clocked"
+                        :log "clocked")
+                 (:name "Today"
+                        :time-grid t
+                        :date today
+                        :todo "TODAY"
+                        :scheduled today
+                        :deadline today
+                        :order 1)
+                 (:name "Overdue"
+                        :deadline past
+                        :scheduled past
+                        :order 2)))))
+            (alltodo
+             ""
+             ((org-agenda-files (list (expand-file-name "work.org" org-directory)))
+              (org-super-agenda-groups
+               '((:name "Waiting/Blocked"
+                        :todo "WAITING"
+                        :order 2)
+                 (:name "In progress" :tag "wip")
+                 (:name "Important" :tag "important")
+                 (:auto-parent t)
+                 (:auto-tags t)))))))
+          ("p" "Personal Daily"
+           ((agenda
+             ""
+             ((org-agenda-dim-blocked-tasks t)
+              (org-super-agenda-groups
+               '((:name "Habits" :habit t :order 2)
+                 (:name "Schedule" :scheduled t :deadline t :time-grid t :order 1)))))
+            (alltodo
+             ""
+             ((org-agenda-overriding-header "")
+              (org-super-agenda-groups
+               '((:name none :discard (:pred blocked-invisible-p))
+                 (:name "Waiting" :todo "WAITING" :order 50)
+                 (:auto-parent t)
+                 (:auto-tags t)))))))))
+  (defun blocked-invisible-p (item)
+    "Check if item is blocked and invisible."
+    (eq (get-text-property 0 'org-todo-blocked item) 'invisible))
 #+end_src
 
-*** Agendas
-
-**** Item appearance
+*** Item appearance
      #+begin_src emacs-lisp
        (setq org-agenda-prefix-format
              '((agenda . " %i %?-12t% s")
@@ -338,139 +384,6 @@ Bring together the different agenda views defined in subsections.
                (tags . " %i ")
                (search . " %i ")))
      #+end_src
-**** agendas
-     #+begin_src emacs-lisp
-       (org-super-agenda-mode 1)
-       (setq org-agenda-custom-commands
-             '(("i" "Inbox"
-                tags "LEVEL=2"
-                ((org-agenda-files
-                  (list (expand-file-name "inbox.org" org-directory)))
-                 (org-agenda-todo-ignore-with-date nil)
-                 (org-agenda-todo-list-sublevels nil)
-                 (org-agenda-dim-blocked-tasks t)
-                 (org-super-agenda-groups
-                  '((:auto-parent t)))))
-               ("w" "Work Daily"
-                ((agenda
-                  ""
-                  ((org-agenda-span 'day)
-                   (org-agenda-files (list (expand-file-name "work/tasks.org" org-directory)))
-                   (org-super-agenda-groups
-                    '((:name "Clocked"
-                             :log "clocked")
-                      (:name "Today"
-                             :time-grid t
-                             :date today
-                             :todo "TODAY"
-                             :scheduled today
-                             :deadline today
-                             :order 1)
-                      (:name "Overdue"
-                             :deadline past
-                             :scheduled past
-                             :order 2)))))
-                 (alltodo
-                  ""
-                  ((org-agenda-files (list (expand-file-name "work/tasks.org" org-directory)))
-                   (org-super-agenda-groups
-                    '((:name "Waiting/Blocked"
-                             :todo "WAITING"
-                             :order 2)
-                      (:name "In progress" :tag "wip")
-                      (:name "Important" :tag "important")
-                      (:auto-parent t)
-                      (:auto-tags t)))))))
-               ("p" "Personal Daily"
-                ((agenda
-                  ""
-                  ((org-agenda-dim-blocked-tasks t)
-                   (org-super-agenda-groups
-                    '((:name "Habits" :habit t :order 2)
-                      (:name "Schedule" :scheduled t :deadline t :time-grid t :order 1)))))
-                 (alltodo
-                  ""
-                  ((org-agenda-overriding-header "")
-                   (org-super-agenda-groups
-                    '((:name none :discard (:pred blocked-invisible-p))
-                      (:name "Waiting" :todo "WAITING" :order 50)
-                      (:auto-parent t)
-                      (:auto-tags t)))))))))
-       (defun blocked-invisible-p (item)
-         "Check if item is blocked and invisible."
-         (eq (get-text-property 0 'org-todo-blocked item) 'invisible))
-     #+end_src
-
-*** Eisenhower matrix
-    This can be run both on a particular buffer and in general, though in the latter case the output isn't very useful.
-#+name: ike-matrix
-#+begin_src emacs-lisp :results value :tangle no
-  ;; (setq org-tag-persistent-alist
-  ;;       (append  org-tag-persistent-alist
-  ;;                 '(("urgent" . ?u)
-  ;;                   ("important" . ?i))))
-  ;; (setq org-agenda-custom-commands
-  ;;       (append org-agenda-custom-commands
-                '(("i" "Eisenhower Matrix"
-                    ((tags "important&urgent")
-                    (tags "important&-urgent")
-                    (tags "urgent&-important")
-                    (tags "-urgent&-important"))))
-;; ))
-#+end_src
-
-*** Personal Agendas
-#+name: personal
-#+begin_src emacs-lisp :results value :tangle no
-  '(("p" . "Personal")
-    ("pp" "Personal daily"
-     ((agenda "" ((org-agenda-dim-blocked-tasks t)))))
-    ("pi" "Quick inbox review"
-     tags "inbox+LEVEL=2"
-     ((org-agenda-files (list (expand-file-name "inbox.org" org-directory)))
-      (org-agenda-todo-ignore-with-date nil)
-      (org-agenda-todo-list-sublevels nil)
-      (org-agenda-dim-blocked-tasks t)))
-    ("pr" "Personal weekly review"
-     ((tags "inbox+LEVEL=2"
-            ((org-agenda-overriding-header "Inbox")
-             (org-agenda-files (list (expand-file-name "inbox.org" org-directory)))
-             (org-agenda-todo-ignore-with-date nil)
-             (org-agenda-max-entries 1)))
-      (stuck ""
-             ((org-agenda-files (list (expand-file-name "gtd.org" org-directory)))))
-      (todo ""
-            ((org-agenda-overriding-header "Unscheduled tasks")
-             (org-agenda-files (list (expand-file-name "gtd.org" org-directory)))
-             (org-agenda-max-todos 5)))
-      (tags "weekly+LEVEL=2"
-            ((org-agenda-overriding-header "Backlog for Weekly review")
-             (org-agenda-files (list (expand-file-name "someday.org" org-directory)))))
-      (agenda "" ((org-agenda-span 7))))
-     ((org-agenda-dim-blocked-tasks nil))))
-#+end_src
-
-*** Work Agendas
-#+name: work
-#+begin_src emacs-lisp :results value :tangle no
-  '(("w" . "Work")
-    ("ww" "Work daily"
-     ((agenda "" ((org-agenda-dim-blocked-tasks t) (org-agenda-files (list (expand-file-name "work/gtd.org" org-directory)))))))
-    ("wr" "Weekly Review"
-     ((stuck ""
-             ((org-agenda-files (list (expand-file-name "work/gtd.org" org-directory)))))
-      (todo ""
-            ((org-agenda-overriding-header "Unscheduled tasks")
-             (org-agenda-files (list (expand-file-name "work/gtd.org" org-directory)))
-             (org-agenda-max-todos 5)))
-      (agenda ""
-              ((org-agenda-span 5)
-               (org-agenda-start-on-weekday 1)
-               (org-agenda-files
-                (list
-                 (expand-file-name "work/gtd.org" org-directory))))))))
-#+end_src
-
 ** Refiling
   [[https://stackoverflow.com/a/21335010/4501212][This link]] finally explains the meaning of the variable ~org-refile-use-outline-path~ the way the docs don't.
   Basically, it lets you treat files as refile targets, with the item being refiled added to the file as a top-level heading.
@@ -483,8 +396,7 @@ Bring together the different agenda views defined in subsections.
            '(("~/Documents/org/gtd.org" :maxlevel . 5)
              ("~/Documents/org/someday.org" :maxlevel . 3)
              ("~/Documents/org/tickler.org" :maxlevel . 2)
-             ("~/Documents/org/work/tasks.org" :maxlevel . 5)
-             ("~/Documents/org/work/rtr.org" :maxlevel . 5)))
+             ("~/Documents/org/work.org" :maxlevel . 5)))
    #+end_src
 
 ** Remove WIP after it's done
