--- a/spacemacs.d/user-config.org
+++ b/spacemacs.d/user-config.org
@@ -770,3 +770,10 @@ Stopping at filesystem boundary (GIT_DISCOVERY_ACROSS_FILESYSTEM not set).
        (browse-url "https://www.keybr.com/")
        (browse-url "https://www.online-stopwatch.com/timer/10minutes"))
  #+end_src
+* Magit
+** No Olivetti in blame mode
+#+begin_src emacs-lisp
+  (with-eval-after-load 'magit
+    (setq magit-blame-disable-modes
+          (add-to-list 'magit-blame-disable-modes 'olivetti-mode)))
+#+end_src
