--- a/spacemacs.d/user-config.org
+++ b/spacemacs.d/user-config.org
@@ -777,3 +777,16 @@ Stopping at filesystem boundary (GIT_DISCOVERY_ACROSS_FILESYSTEM not set).
     (setq magit-blame-disable-modes
           (add-to-list 'magit-blame-disable-modes 'olivetti-mode)))
 #+end_src
+** Save current branch name to clipboard
+
++Borrowed+ Stolen from [[https://emacs.stackexchange.com/a/30496][here]].
+#+begin_src emacs-lisp
+  (defun ik/magit-add-current-buffer-to-kill-ring ()
+    "Show the current branch in the echo-area and add it to the `kill-ring'."
+    (interactive)
+    (let ((branch (magit-get-current-branch)))
+      (if branch
+          (progn (kill-new branch)
+                 (message "%s" branch))
+        (user-error "There is not current branch"))))
+#+end_src
