--- a/spacemacs.d/user-config.org
+++ b/spacemacs.d/user-config.org
@@ -551,7 +551,8 @@ Code blocks and tables should have default font.
       (setq org-odt-preferred-output-format "docx")
     #+end_src
 
-** Space before link when inserting
+** Links
+*** Space before link when inserting
 Something about evil cursor management and the way org inserts links swallows the space before the link. This re-adds the space.
 #+begin_src emacs-lisp
   (defun org-insert-link-with-space (orig-func &rest args)
@@ -561,6 +562,12 @@ Something about evil cursor management and the way org inserts links swallows th
   (advice-add 'org-insert-link
               :around #'org-insert-link-with-space)
 #+end_src
+*** Use IDs for org heading links
+#+begin_src emacs-lisp
+  (setq org-id-link-to-org-use-id t)
+#+end_src
+
+
 * Gui elements and prompts
 ** Simpler yes/no prompt:
  #+begin_src emacs-lisp
