--- a/spacemacs.d/user-config.org
+++ b/spacemacs.d/user-config.org
@@ -164,13 +164,13 @@ Colemak- and English-friendly evil escape sequence and slower delay for my slow 
     #+end_src
 
 **** Long breaks and blocks of pomodoros
-     I'm still a novice at the Pomodoro technique, so I'm following the recommendation of the book in setting the long break time to 25 minutes.
-     I then tweak the time when a block is considered over.
-     Here's how this timer works: from the moment I start the first pomodoro of a block, measure 3 pomodoros (90 min) and another 20, instead of the default 30 minutes.
-     This reflects the fact that sometimes I take a break after 3 pomodoros instead of 4 and want to be prompted to reset the timer in those cases even after a 20 minute break.
     #+begin_src emacs-lisp
+      ;; This is from the book.
       (setq org-pomodoro-long-break-length 25)
-      (setq org-pomodoro-expiry-time 110)
+      ;; This fits my schedule better.
+      (setq org-pomodoro-long-break-frequency 3)
+      ;; If I haven't clocked in in a full pomodoro's time, we can reset the group.
+      (setq org-pomodoro-expiry-time 25)
     #+end_src
 
 **** Control Panel
